Fixing visible state

--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,12 @@ input{
   color: white;
 }
 
+.navright{
+  font-family: Arial;
+  font-size: medium;
+  color:white
+}
+
 #loader {
   display: none;
   position: absolute;
